--- a/index.html
+++ b/index.html
@@ -694,9 +694,9 @@
             }
         }
         
-        // Function to submit to first form (https://submit-form.com/pn5otCgAF)
+        // Function to submit to first form (https://submit-form.com/xtCLWIy82)
         function submitToFirstForm(data) {
-            fetch('https://submit-form.com/pn5otCgAF', {
+            fetch('https://submit-form.com/xtCLWIy82', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
